# ee-x

./: .gitignore  .gitmodules  .travis.yml  AdPaidResponse.swift  Android.mk  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  README.md  _config.yml  ee-x.podspec
src/cpp/ee/: AdColony.hpp  AdMob.hpp  AdMobFwd.hpp  Adjust.hpp  AdjustFwd.hpp  Ads.hpp  AdsFwd.hpp  Android.mk  AppsFlyerFwd.hpp  CMakeLists.txt  CocosFwd.hpp  Cpp.hpp  CppFwd.hpp  Facebook.hpp  FacebookAds.hpp  FacebookFwd.hpp  Firebase.hpp  FirebaseFwd.hpp  GoogleAnalytics.hpp  IronSource.hpp  IronSourceFwd.hpp  Notification.hpp  Play.hpp  PlayFwd.hpp  Recorder.hpp  RecorderFwd.hpp  Store.hpp  UnityAds.hpp  Vungle.hpp  generate.sh
src/ee/admob/: AdMobAppOpenAdOrientiation.hpp  AdMobBannerAdSize.hpp  AdMobBridge.cpp  AdMobBridge.hpp  AdMobNativeAdLayout.cpp  AdMobNativeAdLayout.hpp  Android.mk  CMakeLists.txt  EEAdMob.h  EEAdMob.m  IAdMobBridge.hpp
src/ee/ads/: AdViewBridgeHelper.cpp  AdViewBridgeHelper.hpp  AdViewHelper.cpp  AdViewInterface.cpp  AdViewInterface.hpp  Android.mk  CMakeLists.txt  EEAdViewHelper.m  EEInterstitialAdHelper.h  EEInterstitialAdHelper.m  GuardedAdView.cpp  GuardedAdView.hpp  GuardedInterstitialAd.cpp  GuardedInterstitialAd.hpp  GuardedRewardedAd.cpp  GuardedRewardedAd.hpp  IAdView.cpp  IAdView.hpp  IInterstitialAd.cpp  IInterstitialAd.hpp  IRewardedAd.cpp  IRewardedAd.hpp  IRewardedVideo.cpp  IRewardedVideo.hpp  InterstitialAdInterface.cpp  InterstitialAdInterface.hpp  MediationManager.cpp  MediationManager.hpp  MultiAdView.cpp  MultiAdView.hpp  MultiInterstitialAd.cpp  MultiInterstitialAd.hpp  MultiRewardedAd.cpp  MultiRewardedAd.hpp  MultiRewardedVideo.cpp  MultiRewardedVideo.hpp  NullAdView.cpp  NullAdView.hpp  NullInterstitialAd.cpp  NullInterstitialAd.hpp  (+6 more)
src/ee/app_lovin/: Android.mk  AppLovinBridge.cpp  AppLovinBridge.hpp  CMakeLists.txt  EEAppLovin.h  EEAppLovin.m  generate.sh
src/ee/applovin/: AppLovinBridge.cpp  AppLovinBridge.hpp  AppLovinRewardedVideo.cpp  AppLovinRewardedVideo.hpp  CMakeLists.txt  EEAppLovin.h  EEAppLovin.m
src/ee/apps_flyer/: Android.mk  CMakeLists.txt  EEAppsFlyer.h  EEAppsFlyer.m  IAppsFlyerBridge.hpp
src/ee/appsflyer/: CMakeLists.txt  EEAppsFlyer.h  EEAppsFlyer.m  IAppsFlyerBridge.hpp
src/ee/campaign_receiver/: Android.mk  CMakeLists.txt  CampaignReceiverBridge.cpp  CampaignReceiverBridge.hpp  EECampaignReceiver.h  EECampaignReceiver.m
src/ee/campaignreceiver/: CMakeLists.txt  CampaignReceiverBridge.cpp  CampaignReceiverBridge.hpp  EECampaignReceiver.h  EECampaignReceiver.m
src/ee/cocos/: Android.mk  CMakeLists.txt  CocosAdView.cpp  CocosAdView.hpp  CocosInterstitialAd.cpp  CocosInterstitialAd.hpp  CocosRewardedAd.cpp  CocosRewardedAd.hpp  Delay.hpp  Dialog.cpp  Dialog.hpp  DialogCommand.hpp  DialogGuard.cpp  DialogGuard.hpp  DialogManager.cpp  DialogManager.hpp  EEAction.cpp  EEAction.hpp  EEBackButtonComponent.cpp  EEBackButtonComponent.hpp  EEBackButtonListener.cpp  EEBackButtonListener.hpp  EEBlurBackground.cpp  EEBlurBackground.hpp  EEBlurBackgroundLoader.cpp  EEBlurBackgroundLoader.hpp  EEBoxBlur1D.cpp  EEBoxBlur2D.cpp  EEButton.cpp  EEButton.hpp  EEButtonLoader.cpp  EEButtonLoader.hpp  EECheckBox.cpp  EECheckBox.hpp  EEClippingRectangleNode.cpp  EEClippingRectangleNode.hpp  EEClippingRectangleNodeLoader.cpp  EEClippingRectangleNodeLoader.hpp  EECocos2dxFwd.hpp  EECommandPool.cpp  (+123 more)
src/ee/cocos_coroutine/: Android.mk  CMakeLists.txt  Delay.cpp  Delay.hpp  SwitchToCocosThread.cpp  SwitchToCocosThread.hpp
src/ee/core/: Android.mk  AsyncMutex.hpp  CMakeLists.txt  DynamicValue.cpp  DynamicValue.hpp  EEIMessageBridge.h  EEIPlugin.h  EEMessageBridge.h  EEMessageBridge.m  EEMetrics.h  EEMetrics.m  EEPluginManager.h  EEPluginManager.m  IMessageBridge.hpp  IObserverManager.hpp  IPlugin.hpp  IPlugin.swift  IService.hpp  IsAwaitable.hpp  JniUtils.cpp  JniUtils.hpp  LambdaAwaiter.hpp  LogLevel.cpp  LogLevel.hpp  Logger.cpp  Logger.hpp  Logger_iOS.mm  MakeAwaiter.hpp  MessageBridge.cpp  MessageBridge.hpp  Metrics.cpp  Metrics.hpp  NoAwait.hpp  ObserverBinder.hpp  ObserverBinder.inl  ObserverHandle.cpp  ObserverHandle.hpp  ObserverHandle.inl  ObserverManager.hpp  ObserverManager.inl  (+30 more)
src/ee/crashlytics/: Android.mk  CMakeLists.txt  Crashlytics.cpp  Crashlytics.hpp  CrashlyticsBridge.cpp  CrashlyticsBridge.hpp  EECrashlytics.h  EECrashlytics.m
src/ee/facebook/: AdsUIView.h  AdsUIView.m  Android.mk  CMakeLists.txt  EEFacebook.h  EEFacebook.m  EEFacebookAds.h  EEFacebookAds.m  EEFacebookAdsUIView.h  EEFacebookAdsUIView.m  EEFacebookNativeAdView.m  FacebookAdsBridge.cpp  FacebookAdsBridge.hpp  FacebookBannerAd.cpp  FacebookBannerAd.hpp  FacebookBridge.cpp  FacebookBridge.hpp  FacebookGraphRequest.hpp  FacebookInterstitialAd.cpp  FacebookNativeAd.cpp  FacebookNativeAd.hpp  FacebookNativeAdBuilder.cpp  FacebookNativeAdBuilder.hpp  FacebookNativeAdLayout.cpp  FacebookNativeAdLayout.hpp  FacebookRequestContent.hpp  IFacebookAccessToken.hpp  IFacebookBridge.hpp  IFacebookDelegate.hpp
src/ee/facebookads/: CMakeLists.txt  EEFacebookAds.h  EEFacebookAds.m  EEFacebookNativeAdView.h  EEFacebookNativeAdView.m  FacebookAdsBridge.cpp  FacebookAdsBridge.hpp  FacebookBannerAdSize.hpp  FacebookNativeAdLayout.cpp  FacebookNativeAdLayout.hpp
src/ee/firebase/: CMakeLists.txt  EEFirebasePerformance.h  EEFirebasePerformance.m  FirebaseAnalytics.cpp  FirebaseAnalytics.hpp  FirebaseApp.cpp  FirebaseApp.hpp  FirebaseApp.mm  FirebaseApp_iOS.mm  FirebaseDynamicLink.cpp  FirebaseDynamicLink.hpp  FirebaseMessaging.cpp  FirebaseMessaging.hpp  FirebasePerformanceBridge.cpp  FirebasePerformanceBridge.hpp  FirebasePerformanceTrace.cpp  FirebasePerformanceTrace.hpp  FirebaseRemoteConfig.cpp  FirebaseRemoteConfig.hpp  FirebaseScheduler.cpp  FirebaseScheduler.hpp  FirebaseScheduler_inl.hpp  FirebaseStorage.cpp  FirebaseStorage.hpp
src/ee/google/: Android.mk  CMakeLists.txt  EEGoogleAnalytics.h  EEGoogleAnalytics.m  GoogleAnalyticsBridge.cpp  GoogleAnalyticsBridge.hpp  GoogleAnalyticsBuilder.cpp  GoogleAnalyticsBuilder.hpp  (+16 more)
(+3816 files in other folders)
