cmake_minimum_required(VERSION 3.1)

project(ee_x)

add_subdirectory(src/cpp/ee)
add_subdirectory(src/cpp/ee/firebase_analytics)
add_subdirectory(src/cpp/ee/firebase_core)
add_subdirectory(src/cpp/ee/firebase_dynamic_link)
add_subdirectory(src/cpp/ee/firebase_messaging)
add_subdirectory(src/cpp/ee/firebase_remote_config)
add_subdirectory(src/cpp/ee/firebase_storage)
add_subdirectory(third_party/firebase_cpp_sdk)
add_subdirectory(third_party/jansson)
add_subdirectory(third_party/soomla/core)
add_subdirectory(third_party/soomla/store)